feat: clean up and move the classifier to its own file

--- a/src/ml.ipynb
+++ b/src/ml.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-03-21T07:20:03.767495Z",
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-03-21T07:20:52.223060Z",
@@ -233,14 +233,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-03-21T07:21:01.247382Z",
      "start_time": "2025-03-21T07:20:59.846979Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(70000, 784)\n",
+      "(70000,)\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'visualize' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 13\u001b[39m\n\u001b[32m     10\u001b[39m \u001b[38;5;28mprint\u001b[39m(X_data.shape)\n\u001b[32m     11\u001b[39m \u001b[38;5;28mprint\u001b[39m(y_data.shape)\n\u001b[32m---> \u001b[39m\u001b[32m13\u001b[39m \u001b[43mvisualize\u001b[49m(X_data, y_data, row_count, col_count, \u001b[32m0\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'visualize' is not defined"
+     ]
+    }
+   ],
    "source": [
     "row_count = 10\n",
     "col_count = 10\n",
@@ -325,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-03-21T08:12:12.375403Z",
@@ -334,16 +354,16 @@
    },
    "outputs": [],
    "source": [
-    "from typing import Literal, Callable, Union\n",
+    "from typing import Literal, Callable, Union, List\n",
     "import numpy as np\n",
     "from numpy.typing import NDArray, ArrayLike\n",
-    "from src.model.WeightInitialization import WeightInitiator\n",
+    "from model.WeightInitialization import WeightInitiator\n",
     "\n",
     "\n",
     "class FFNNClassifier:\n",
     "    def __init__(self,\n",
     "            hidden_layer_sizes: NDArray,\n",
-    "            activation_func: Literal['linear', 'relu', 'sigmoid', 'tanh', 'softmax'],\n",
+    "            activation_func: List[Literal['linear', 'relu', 'sigmoid', 'tanh', 'softmax']],\n",
     "            learning_rate: float,\n",
     "            verbose: int, # 0: no print, 1: print epoch progress\n",
     "            max_epoch: int,\n",
@@ -382,24 +402,11 @@
     "    def _generate_initial_weights(self):\n",
     "        len_features = len(self.X[0])\n",
     "        layers = np.copy([len_features])\n",
-    "        len_classes = np.array([len(np.unique(self.y))])\n",
-    "        if (\n",
-    "            self.loss_func == 'mean_squared_error' or\n",
-    "            (\n",
-    "                self.loss_func == 'binary_cross_entropy' and\n",
-    "                self.activation_func == 'sigmoid' or\n",
-    "                self.activation_func == 'softmax'\n",
-    "            ) or\n",
-    "            (\n",
-    "                self.loss_func == 'categorical_cross_entropy' and\n",
-    "                self.activation_func == 'softmax'\n",
-    "            )\n",
-    "        ):\n",
-    "            len_classes = np.array([10])\n",
+    "        len_classes = np.array([self._get_number_of_classes()])\n",
     "        layers = np.append(layers, self.hidden_layer_sizes)\n",
-    "        layers = np.append(layers ,len_classes)\n",
+    "        layers = np.append(layers, len_classes)\n",
     "        print(\"layers:\", layers)\n",
-    "        self.init =  WeightInitiator(\n",
+    "        self.init =  WeightInitiator( \n",
     "            init_method=self.init_method,\n",
     "            nodes=layers,\n",
     "            lower_bound=self.lower_bound,\n",
@@ -435,27 +442,36 @@
     "            return sig * (1 - sig)\n",
     "        elif func == 'tanh':\n",
     "            p = 2.0/(np.exp(x) - np.exp(-x)) # should be the same as 1 - np.tanh(x) ** 2. will check later\n",
-    "            return p*p\n",
-    "        elif func == 'softmax': # TODO: Check if this implementation is correct\n",
-    "            delta = np.zeros_like(x)\n",
-    "            for i in range(x.shape[0]): delta[i, i] = 1\n",
-    "            softmax = self._activation_function(x, 'softmax')\n",
-    "            return softmax*(delta-softmax)\n",
-    "            # s = self._activation_function(x, 'softmax')\n",
-    "            # return s * (1 - s)\n",
+    "            return p*p  \n",
+    "        elif func == 'softmax':\n",
+    "            batch_size, n = x.shape\n",
+    "            jacobians = np.zeros((batch_size, n, n))\n",
+    "\n",
+    "            for i in range(batch_size):\n",
+    "                s = x[i].reshape(-1, 1)\n",
+    "                jacobians[i] = np.diagflat(s) - s @ s.T\n",
+    "\n",
+    "            return jacobians\n",
     "        raise \"Activation function not supported!\"\n",
     "\n",
     "\n",
     "    def _loss_function(self, y_act, y_pred, number_of_classes, func: str):\n",
     "        if func == 'mean_squared_error': return FFNNClassifier.mean_squared_error(y_act, y_pred)\n",
     "        elif func == 'binary_cross_entropy': return FFNNClassifier.binary_cross_entropy(y_act, y_pred)\n",
-    "        elif func == 'categorical_cross_entropy': return FFNNClassifier.categorical_cross_entropy(y_act, y_pred, number_of_classes)\n",
+    "        elif func == 'categorical_cross_entropy': return FFNNClassifier.categorical_cross_entropy(y_act, y_pred)\n",
+    "        \n",
     "    def mean_squared_error(y_act, y_pred):\n",
-    "        return 2/len(y_act[0]) * (y_pred - y_act)\n",
-    "    def binary_cross_entropy(y_act, y_pred, n):\n",
-    "        return (y_pred - y_act)/(y_pred*(1 - y_pred))\n",
-    "    def categorical_cross_entropy(y_act, y_pred, c):\n",
-    "        return y_pred - y_act\n",
+    "        return 2/len(y_act[0]) * (y_pred - y_act) # 2/len(y_act[0]) can actually be ignored because we have learning rate\n",
+    "\n",
+    "\n",
+    "    def binary_cross_entropy(y_act, y_pred):\n",
+    "        return (y_pred - y_act)/(y_pred*(1 - y_pred)) * len(y_act[0]) # len(y_act[0]) can actually be ignored because we have learning rate\n",
+    "    \n",
+    "    def categorical_cross_entropy(y_act, y_pred):\n",
+    "        \n",
+    "        return (y_pred - y_act) / len(y_act[0]) # len(y_act[0]) can actually be ignored because we have learning rate\n",
+    "    \n",
+    "        # -y_act / y_pred ? if activation function is not softmax\n",
     "\n",
     "# endregion functions\n",
     "\n",
@@ -561,7 +577,7 @@
     "                    a_k = b_k + np.dot(h_k_min_1, w_k) # numpy will automatically broadcast b_k (row will be copied to match the result from dot) so that this is addable\n",
     "\n",
     "                    nodes[k] = a_k\n",
-    "                    nodes_active[k] = self._activation_function(a_k, self.activation_func)\n",
+    "                    nodes_active[k] = self._activation_function(a_k, self.activation_func[k-1])\n",
     "\n",
     "                # print([p.shape for p in nodes_active])\n",
     "                loss_grad = self._loss_function(\n",
@@ -579,7 +595,18 @@
     "                weight_gradiens = [0 for i in range(len(self.weights_history))] # 0 will be replaced with numpy.array\n",
     "                bias_gradiens = [0 for i in range(len(self.biases_history))] # 0 will be replaced with numpy.array\n",
     "\n",
-    "                delta = loss_grad * self._activation_derived_function(nodes[-1], self.activation_func)\n",
+    "\n",
+    "                delta = 0\n",
+    "                if self.activation_func[-1] == 'softmax' and self.loss_func == 'categorical_cross_entropy':\n",
+    "                    delta = loss_grad # already simplified (y_pred - y_true)\n",
+    "                elif self.activation_func[-1] == 'softmax' and self.loss_func != 'categorical_cross_entropy':\n",
+    "                    jacobians = self._activation_derived_function(nodes[-1], self.activation_func[-1])\n",
+    "                    loss_grad_col = loss_grad[..., np.newaxis] # (batch_size, n) -> (batch_size, n, 1)\n",
+    "                    delta = np.matmul(jacobians, loss_grad_col)  # (batch_size, n, 1)\n",
+    "                    delta = np.squeeze(delta, axis=-1) # (batch_size, n)\n",
+    "                else:\n",
+    "                    delta = loss_grad * self._activation_derived_function(nodes[-1], self.activation_func[-1])\n",
+    "\n",
     "\n",
     "                weight_gradiens[network_depth-2] = np.dot(nodes_active[-2].T, -delta)\n",
     "                bias_gradiens[network_depth-2] = -delta\n",
@@ -588,7 +615,7 @@
     "                for k in range(network_depth-2, 0, -1): # from the last hidden layer (not including the output layer)\n",
     "                    w = self.weights_history[k]\n",
     "\n",
-    "                    delta = np.dot(delta, w.T) * self._activation_derived_function(nodes[k], self.activation_func)\n",
+    "                    delta = np.dot(delta, w.T) * self._activation_derived_function(nodes[k], self.activation_func[k-1])\n",
     "\n",
     "                    weight_gradiens[k-1] = np.dot(nodes_active[k-1].T, -delta)\n",
     "                    bias_gradiens[k-1] = -delta\n",
@@ -637,7 +664,7 @@
     "                a_k = b_k + np.dot(h_k_min_1, w_k)\n",
     "\n",
     "                nodes[k] = a_k\n",
-    "                nodes_active[k] = self._activation_function(a_k, self.activation_func)\n",
+    "                nodes_active[k] = self._activation_function(a_k, self.activation_func[k-1])\n",
     "            predicted_class = [int(np.argmax(nodes_active[-1][i])) for i in range(len(nodes_active[-1]))] # idx with highest value. idx is also the class\n",
     "            prediction[current_idx:until_idx] = predicted_class\n",
     "            current_idx += self.batch_size\n",
@@ -725,14 +752,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-03-21T08:26:12.497248Z",
      "start_time": "2025-03-21T08:25:51.963909Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "layers: [784 256 128  64  10]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sppAghetti\\AppData\\Local\\Temp\\ipykernel_29124\\2786885738.py:74: RuntimeWarning: overflow encountered in exp\n",
+      "  elif func == 'sigmoid': return 1.0/(1.0 + np.exp(-x))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/15 done\n",
+      "Epoch 2/15 done\n",
+      "Epoch 3/15 done\n",
+      "Epoch 4/15 done\n",
+      "Epoch 5/15 done\n",
+      "Epoch 6/15 done\n",
+      "Epoch 7/15 done\n",
+      "Epoch 8/15 done\n",
+      "Epoch 9/15 done\n",
+      "Epoch 10/15 done\n",
+      "Epoch 11/15 done\n",
+      "Epoch 12/15 done\n",
+      "Epoch 13/15 done\n",
+      "Epoch 14/15 done\n",
+      "Epoch 15/15 done\n",
+      "Accuracy: 87.0 %\n"
+     ]
+    }
+   ],
    "source": [
     "# Case random\n",
     "def one_hot_encode(y):\n",
@@ -746,7 +812,7 @@
     "\n",
     "ffnn = FFNNClassifier(\n",
     "    hidden_layer_sizes=[256, 128, 64],\n",
-    "    activation_func=\"sigmoid\",\n",
+    "    activation_func=[\"sigmoid\", \"sigmoid\", \"sigmoid\", \"sigmoid\"],\n",
     "    learning_rate=0.05,\n",
     "    verbose=1,\n",
     "    max_epoch=15,\n",
@@ -772,9 +838,9 @@
     "print(len(np.unique(y_one_hot)))\n",
     "ffnn.fit(x_sliced, y_one_hot)\n",
     "prediction = ffnn.predict(X_data[0:test_until_idx])\n",
-    "print(\"Prediction:\", prediction)\n",
-    "print(\"Expected:\", y_sliced[0:test_until_idx])\n",
-    "print(\"Final Weights:\", ffnn.weights_history)\n",
+    "# print(\"Prediction:\", prediction)\n",
+    "# print(\"Expected:\", y_sliced[0:test_until_idx])\n",
+    "# print(\"Final Weights:\", ffnn.weights_history)\n",
     "# print(\"Final Biases:\", ffnn.biases_history[-1])\n",
     "\n",
     "def get_same_count(y1, y2):\n",
@@ -1165,7 +1231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
