--- a/src/comparison.ipynb
+++ b/src/comparison.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T10:22:55.669809Z",
-     "start_time": "2025-03-26T10:22:54.448653Z"
+     "end_time": "2025-03-26T12:03:36.721843Z",
+     "start_time": "2025-03-26T12:03:36.717640Z"
     }
    },
    "cell_type": "code",
@@ -15,18 +15,17 @@
     "from sklearn.model_selection import train_test_split\n",
     "from src.lib.FFNNClassifier import FFNNClassifier\n",
     "from sklearn.neural_network import MLPClassifier\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "from matplotlib import pyplot as plt\n"
+    "from sklearn.metrics import accuracy_score\n"
    ],
-   "id": "96667713e99492d3",
+   "id": "801534e44fcbe2c0",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 32
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T10:22:59.912681Z",
-     "start_time": "2025-03-26T10:22:55.677043Z"
+     "end_time": "2025-03-26T12:03:41.177805Z",
+     "start_time": "2025-03-26T12:03:36.757978Z"
     }
    },
    "cell_type": "code",
@@ -69,15 +68,18 @@
     "y_train_one_hot = one_hot_encode(y_train)\n",
     "y_test_one_hot = one_hot_encode(y_test)"
    ],
-   "id": "4cee682bc13fa484",
+   "id": "28a4bd5cdff5847f",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 33
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-26T12:03:41.192835Z",
+     "start_time": "2025-03-26T12:03:41.188093Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "def train_and_evaluate_mlp(hidden_layer_sizes, X_train, y_train, X_test, y_test):\n",
     "    \"\"\"\n",
@@ -102,13 +104,15 @@
     "\n",
     "    return mlp, accuracy, mlp.loss_curve_"
    ],
-   "id": "bd5b809b10bcb4ae"
+   "id": "bd5b809b10bcb4ae",
+   "outputs": [],
+   "execution_count": 34
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T11:46:53.847328Z",
-     "start_time": "2025-03-26T11:46:53.841998Z"
+     "end_time": "2025-03-26T12:03:41.212993Z",
+     "start_time": "2025-03-26T12:03:41.207963Z"
     }
    },
    "cell_type": "code",
@@ -138,13 +142,13 @@
    ],
    "id": "690823e3c6017152",
    "outputs": [],
-   "execution_count": 26
+   "execution_count": 35
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T10:44:31.541202Z",
-     "start_time": "2025-03-26T10:42:44.659494Z"
+     "end_time": "2025-03-26T12:05:14.540638Z",
+     "start_time": "2025-03-26T12:03:41.239351Z"
     }
    },
    "cell_type": "code",
@@ -377,13 +381,13 @@
      ]
     }
    ],
-   "execution_count": 11
+   "execution_count": 36
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T10:57:28.074983Z",
-     "start_time": "2025-03-26T10:55:19.493488Z"
+     "end_time": "2025-03-26T12:06:06.436942Z",
+     "start_time": "2025-03-26T12:05:14.567599Z"
     }
    },
    "cell_type": "code",
@@ -430,48 +434,105 @@
      "text": [
       "Width Variations Experiment:\n",
       "\n",
-      "Testing activation configuration: linear\n",
+      "Testing activation configuration: linear\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ASUS\\Documents\\GitHub\\Feedforward-Neural-Network\\venv\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (20) reached and the optimization hasn't converged yet.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "[SKLEARN] Prediction:  [8 4 5 ... 2 7 1]\n",
-      "[SKLEARN] Accuracy:  0.8994285714285715\n",
+      "[SKLEARN] Accuracy:  0.9067142857142857\n",
       "\n",
       "[CUSTOM] Prediction:  [0 0 0 ... 0 0 0]\n",
       "[CUSTOM] Accuracy:  0.09592857142857143\n",
       "\n",
       "\n",
-      "Testing activation configuration: relu\n",
+      "Testing activation configuration: relu\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ASUS\\Documents\\GitHub\\Feedforward-Neural-Network\\venv\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (20) reached and the optimization hasn't converged yet.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "[SKLEARN] Prediction:  [8 4 8 ... 2 7 1]\n",
-      "[SKLEARN] Accuracy:  0.9259285714285714\n",
+      "[SKLEARN] Accuracy:  0.9294285714285714\n",
       "\n",
       "[CUSTOM] Prediction:  [0 0 0 ... 0 0 0]\n",
       "[CUSTOM] Accuracy:  0.09585714285714286\n",
       "\n",
       "\n",
-      "Testing activation configuration: sigmoid\n",
-      "[SKLEARN] Prediction:  [8 4 5 ... 2 7 1]\n",
-      "[SKLEARN] Accuracy:  0.9023571428571429\n",
-      "\n"
+      "Testing activation configuration: sigmoid\n"
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
-      "\u001B[31mKeyboardInterrupt\u001B[39m                         Traceback (most recent call last)",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[18]\u001B[39m\u001B[32m, line 39\u001B[39m\n\u001B[32m     28\u001B[39m \u001B[38;5;66;03m# Custom MLP\u001B[39;00m\n\u001B[32m     29\u001B[39m custom_mlp = FFNNClassifier(\n\u001B[32m     30\u001B[39m     learning_rate=\u001B[32m0.01\u001B[39m,\n\u001B[32m     31\u001B[39m     activation_func=[act_custom,act_custom],\n\u001B[32m   (...)\u001B[39m\u001B[32m     37\u001B[39m \n\u001B[32m     38\u001B[39m )\n\u001B[32m---> \u001B[39m\u001B[32m39\u001B[39m custom_loss = \u001B[43mcustom_mlp\u001B[49m\u001B[43m.\u001B[49m\u001B[43mfit\u001B[49m\u001B[43m(\u001B[49m\u001B[43mX_train_scaled\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43my_train_one_hot\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m     40\u001B[39m custom_pred = custom_mlp.predict(X_test_scaled)\n\u001B[32m     41\u001B[39m y_test_labels = np.argmax(y_test_one_hot, axis=\u001B[32m1\u001B[39m)\n",
-      "\u001B[36mFile \u001B[39m\u001B[32m~\\Documents\\GitHub\\Feedforward-Neural-Network\\src\\lib\\FFNNClassifier.py:279\u001B[39m, in \u001B[36mFFNNClassifier.fit\u001B[39m\u001B[34m(self, X, y)\u001B[39m\n\u001B[32m    275\u001B[39m w = \u001B[38;5;28mself\u001B[39m.weights_history[k]\n\u001B[32m    277\u001B[39m delta = np.dot(delta, w.T) * FFNNClassifier._activation_derived_function(nodes[k], \u001B[38;5;28mself\u001B[39m.activation_func[k-\u001B[32m1\u001B[39m])\n\u001B[32m--> \u001B[39m\u001B[32m279\u001B[39m weight_gradiens[k-\u001B[32m1\u001B[39m] = \u001B[43mnp\u001B[49m\u001B[43m.\u001B[49m\u001B[43mdot\u001B[49m\u001B[43m(\u001B[49m\u001B[43mnodes_active\u001B[49m\u001B[43m[\u001B[49m\u001B[43mk\u001B[49m\u001B[43m-\u001B[49m\u001B[32;43m1\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m.\u001B[49m\u001B[43mT\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43m-\u001B[49m\u001B[43mdelta\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m    280\u001B[39m \u001B[38;5;66;03m# bias_gradiens[k-1] = -delta\u001B[39;00m\n\u001B[32m    281\u001B[39m bias_gradiens[k-\u001B[32m1\u001B[39m] = -np.mean(delta, axis=\u001B[32m0\u001B[39m, keepdims=\u001B[38;5;28;01mTrue\u001B[39;00m)\n",
-      "\u001B[31mKeyboardInterrupt\u001B[39m: "
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ASUS\\Documents\\GitHub\\Feedforward-Neural-Network\\venv\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (20) reached and the optimization hasn't converged yet.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[SKLEARN] Prediction:  [8 4 8 ... 2 7 1]\n",
+      "[SKLEARN] Accuracy:  0.9096428571428572\n",
+      "\n",
+      "[CUSTOM] Prediction:  [2 5 5 ... 5 9 9]\n",
+      "[CUSTOM] Accuracy:  0.09235714285714286\n",
+      "\n",
+      "\n",
+      "Testing activation configuration: tanh\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ASUS\\Documents\\GitHub\\Feedforward-Neural-Network\\venv\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (20) reached and the optimization hasn't converged yet.\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\ASUS\\Documents\\GitHub\\Feedforward-Neural-Network\\src\\lib\\FFNNClassifier.py:99: RuntimeWarning: overflow encountered in exp\n",
+      "  p = 2.0/(np.exp(x) - np.exp(-x)) # should be the same as 1 - np.tanh(x) ** 2. will check later\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[SKLEARN] Prediction:  [8 4 8 ... 2 7 1]\n",
+      "[SKLEARN] Accuracy:  0.9026428571428572\n",
+      "\n",
+      "[CUSTOM] Prediction:  [1 0 5 ... 0 2 0]\n",
+      "[CUSTOM] Accuracy:  0.036642857142857144\n",
+      "\n"
      ]
     }
    ],
-   "execution_count": 18
+   "execution_count": 37
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T11:00:10.657980Z",
-     "start_time": "2025-03-26T10:59:10.060844Z"
+     "end_time": "2025-03-26T12:06:57.462556Z",
+     "start_time": "2025-03-26T12:06:06.443315Z"
     }
    },
    "cell_type": "code",
@@ -602,13 +663,13 @@
      ]
     }
    ],
-   "execution_count": 19
+   "execution_count": 38
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-26T11:47:39.128009Z",
-     "start_time": "2025-03-26T11:47:00.587040Z"
+     "end_time": "2025-03-26T12:07:36.102386Z",
+     "start_time": "2025-03-26T12:06:57.476191Z"
     }
    },
    "cell_type": "code",
@@ -692,8 +753,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[SKLEARN] Prediction:  [1 0 2 ... 7 9 1]\n",
-      "[SKLEARN] Accuracy:  0.112\n",
+      "[SKLEARN] Prediction:  [3 5 4 ... 3 9 3]\n",
+      "[SKLEARN] Accuracy:  0.08785714285714286\n",
       "\n",
       "[CUSTOM] Prediction:  [2 5 5 ... 5 9 9]\n",
       "[CUSTOM] Accuracy:  0.09235714285714286\n",
@@ -736,8 +797,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[SKLEARN] Prediction:  [5 8 6 ... 3 3 3]\n",
-      "[SKLEARN] Accuracy:  0.08135714285714286\n",
+      "[SKLEARN] Prediction:  [8 4 1 ... 0 0 0]\n",
+      "[SKLEARN] Accuracy:  0.0735\n",
       "\n",
       "[CUSTOM] Prediction:  [2 5 5 ... 5 9 9]\n",
       "[CUSTOM] Accuracy:  0.09235714285714286\n",
@@ -745,7 +806,7 @@
      ]
     }
    ],
-   "execution_count": 27
+   "execution_count": 39
   }
  ],
  "metadata": {
